# Wyrd-Narrative-Scripting

./: README.md
Godot/: default_env.tres  engine.cfg  project.godot  root.tscn  sayhello.gd
Godot/UI/: SayHelloPanel.tscn
Godot/addons/Tokawaje/: TokawajePlugin.gd  plugin.cfg
Haskell/Wyrd/: LICENSE  Wyrd.cabal
Haskell/Wyrd/.stack-work/install/401d7a24/flag-cache/: ghc-paths-0.1.0.9-AhaDlGOsRAepox069XzG  haskeline-0.7.3.1-JyOU2JSgtXQHVTXHfmZqhp  intero-0.1.20  syb-0.6-IcoSwlPi2Nx4zSqMmorFPS
Haskell/Wyrd/.stack-work/install/401d7a24/lib/x86_64-windows-ghc-8.0.2/Wyrd-0.1.0.0-4JCULo2kQf76e3ZuwFNnR0/: Lib.hi  TokiSonaLib.hi  WyrdLib.hi
Haskell/Wyrd/Wyrd-app/: Main.hs
Haskell/Wyrd/src/: TokiSonaLib.hs  WyrdLib.hs
Haskell/Wyrd/tsi-app/: Main.hs
Notes/: Agents_Class_Diagram.uxf  Relationship_Modeling_Knowledge.uxf
Notes/Documents/Questions/: james-lillie-questions.txt
Notes/Documents/Translations/: bohemianRhapsody.txt
Notes/Wyrd-program-backup/: ITextOwner.h  Lexicon.cpp  driver.cpp
Notes/Wyrd-program-backup/Parser/: WyrdParser.h
Notes/Wyrd-program-backup/TSCommon/: DocumentData.h  TokiSonaExceptions.h
Notes/Wyrd-program-backup/TSTree/: TSNodes.cpp  TSNodes.h
Notes/Wyrd-program-backup/Verifiers/: AggregateStreamVerifier.cpp  LexicalVerifier.h  (+1 more)
WebApp/neo4j-typescript-test/: main.ts  package.json  person.js  person.ts
WebApp/test-project/: package.json
WebApp/wyrd/: config.js  package.json
Wyrd/: Wyrd.sln
Wyrd/Godot/: project.godot  root.tscn
Wyrd/Wyrd/: AggregateStreamVerifier.cpp  AggregateStreamVerifier.h  BaseWyrdNode.cpp  Common.h  DesignDocument.html  IAggregateVerifier.h  IParser.h  ITextOwner.h  IVerifier.h  IWyrdNode.h  LexicalVerifier.cpp  LexicalVerifier.h  Lexicon.cpp  Lexicon.h  Syntax.cpp  Syntax.h  TokiSonaFeatures.txt  WordSuggestions.txt  Wyrd.vcxproj  Wyrd.vcxproj.filters  WyrdGraph.h  WyrdNodes.h  WyrdParser.cpp  WyrdParser.h  coreRootMorphology.json  driver.cpp  syntax.json  syntax.txt  tslex.cpp  tslex.hpp  wyrd.cpp  wyrd.hpp
(+62 files in other folders)
