name:                Wyrd
version:             0.1.0.0
synopsis:            Wyrd Narrative Scripting for Runtime Storytelling
description:         Wyrd comes in two parts. A Toki Sona Interpreter for parsing Toki Sona text, and an extremely powerful narrative AI system for simulating characters and stories in real time. The Toki Sona Interpreter will eventually be distributed with a different, commercially free license while Wyrd will be designed as a tool that must be purchased with a license.
homepage:            https://github.com/willnationsdev/Wyrd-Narrative-Scripting
license:             BSD3
license-file:        LICENSE
author:              Will Nations
maintainer:          example@example.com
copyright:           2017 Will Nations
category:            Narrative Scripting
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TokiSonaLib
                     , WyrdLib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable tsi-exe     
  hs-source-dirs:      tsi-app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Wyrd
  default-language:    Haskell2010

executable Wyrd-exe
  hs-source-dirs:      Wyrd-app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Wyrd
  default-language:    Haskell2010

test-suite Wyrd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Wyrd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Wyrd
